--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "cloudnativeapp",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,14 @@
   "bugs": {
     "url": "https://github.com/joaohcastrop/cloudnativeapp/issues"
   },
-  "homepage": "https://github.com/joaohcastrop/cloudnativeapp#readme"
+  "homepage": "https://github.com/joaohcastrop/cloudnativeapp#readme",
+  "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-prettier": "^5.2.3",
+    "prettier": "^3.5.2",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "husky": "^8.0.0"
+  }
 }
