--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.3",
+    "husky": "^8.0.0",
+    "json-server": "^1.0.0-beta.3",
     "prettier": "^3.5.2",
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "husky": "^8.0.0"
+    "prettier-plugin-organize-imports": "^4.1.0"
   }
 }
