--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "next build",
     "prepare": "husky install"
   },
   "repository": {
@@ -27,5 +28,10 @@
     "json-server": "^1.0.0-beta.3",
     "prettier": "^3.5.2",
     "prettier-plugin-organize-imports": "^4.1.0"
+  },
+  "dependencies": {
+    "next": "^15.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
