--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,8 @@
     "@material-ui/styles": "^4.11.4",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
-    "axios": "^0.25.0",
-    "next": "12.0.10",
+    "axios": "^1.8.1",
+    "next": "^15.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.26.0"
